fix: change head to header in index.html

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>rsschool-cv</title>
 </head>
 <body>
-    <head>
+    <header>
         <ul>
             <li>first</li>
             <li>second </li>
             <li>third</li>
         </ul>
-    </head>
+    </header>
     <main>
         <h1>Title</h1>        
     </main>
